--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
-    "extends": "@rocketseat/eslint-config/node",
-    "rules": {
-        "no-useless-constructor": "off"
-    }
+  "extends": ["@rocketseat/eslint-config/node", "plugin:prettier/recommended"],
+  "rules": {
+    "no-useless-constructor": "off",
+    "prettier/prettier": "error",
+    "endOfLine": "lf"
+  }
 }
