--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "@typescript-eslint/parser": "^8.18.1",
     "@vitest/coverage-v8": "^2.1.8",
@@ -53,6 +54,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "prisma": "^6.1.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "type": "module",
