Copiando camada de domínio

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["@rocketseat/eslint-config/node", "plugin:prettier/recommended"],
   "rules": {
     "no-useless-constructor": "off",
+    "no-new": "off",
     "prettier/prettier": "error",
     "endOfLine": "lf"
   }
